--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "SwooleServer\\LaravelServiceProvider"
+        "Lee2son\\SwooleServer\\LaravelServiceProvider"
       ],
       "aliases": {
 
