--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
       "src/helpers.php"
     ],
     "psr-4": {
-      "Lee2son\\SwooleServer\\": "src"
+      "Lee2son\\Laravoole\\": "src"
     }
   },
   "autoload-dev": {
@@ -37,7 +37,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "Lee2son\\SwooleServer\\LaravelServiceProvider"
+        "Lee2son\\Laravoole\\LaravelServiceProvider"
       ],
       "aliases": {
 
