--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "Lee2son\\Laravoole\\LaravelServiceProvider"
+        "Lee2son\\Laravoole\\LaravooleServiceProvider"
       ],
       "aliases": {
 
