--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "php": "^7.1.8"
   },
   "require-dev": {
-    "laravel/lumen-framework": "~5.4",
+    "laravel/framework": "5.8.*",
+    "laravel/tinker": "^1.0",
     "swoole/ide-helper": "@dev"
   },
   "autoload": {
