--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,10 @@
 {
-  "name": "lee2son/swoole-websocket-laravel",
+  "name": "lee2son/swoole-laravel",
   "description": "使用swoole替代php-fpm作为laravel的HTTP层，同时提供websocket支持",
   "keywords": [
     "swoole",
     "websocekt",
-    "laravel",
-    "lumen"
+    "laravel"
   ],
   "license": "MIT",
   "authors": [
