--- a/composer.json
+++ b/composer.json
@@ -45,8 +45,11 @@
     }
   },
   "scripts": {
-    "post-autoload-dump": [
+    "post-package-install": [
       "@php artisan vendor:publish --tag=laravoole"
+    ],
+    "pre-package-uninstall": [
+
     ]
   }
 }
