--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "lee2son/swoole-laravel",
   "description": "使用swoole替代php-fpm作为laravel的HTTP层，同时提供websocket支持",
+  "type": "library",
   "keywords": [
     "swoole",
     "websocekt",
