--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "lee2son/swoole-laravel",
-  "description": "使用swoole替代php-fpm作为laravel的HTTP层，同时提供websocket支持",
+  "description": "使用 swoole 作为 webserver 来搭载 laravel 框架",
   "type": "library",
   "keywords": [
     "swoole",
