--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "Flysion\\Swoolaravel\\SwoolaravelServiceProvider"
+        "Flysion\\Swoolaravel\\ServiceProvider"
       ],
       "aliases": {
 
